--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bitcore-wallet-client",
-  "description": "Client for bitcore-wallet-service",
-  "author": "BitPay Inc",
+  "name": "bitcore-wallet-client-rapture",
+  "description": "Client for bitcore-wallet-service-rapture",
+  "author": "Rapture",
   "version": "6.7.5",
   "license": "MIT",
   "keywords": [
@@ -17,16 +17,16 @@
   "engine": "node >= 8.0.0",
   "main": "index.js",
   "repository": {
-    "url": "git@github.com:bitpay/bitcore-wallet-client.git",
+    "url": "git@github.com:RaptureCore/bitcore-wallet-client-rapture.git",
     "type": "git"
   },
   "bugs": {
-    "url": "https://github.com/bitpay/bitcore-wallet-client/issues"
+    "url": "https://github.com/RaptureCore/bitcore-wallet-client-rapture/issues"
   },
   "dependencies": {
     "async": "^0.9.0",
     "bip38": "^1.3.0",
-    "bitcore-lib": "^0.15.0",
+    "bitcore-lib-rapture": ">=0.16.0",
     "bitcore-lib-cash": "^0.16.1",
     "bitcore-mnemonic": "^1.3.0",
     "bitcore-payment-protocol": "^1.7.0",
@@ -37,7 +37,7 @@
     "superagent": "^3.4.1"
   },
   "devDependencies": {
-    "bitcore-wallet-service": "2.3.0",
+    "bitcore-wallet-service-rapture": ">=2.4.0",
     "browserify": "^13.1.0",
     "chai": "^1.9.1",
     "coveralls": "^2.11.2",
