--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "bip38": "^1.3.0",
     "bitcore-lib-cash": "^0.16.1",
     "bitcore-lib-rapture": ">=0.16.0",
-    "bitcore-mnemonic": "^1.3.0",
+    "bitcore-mnemonic-rapture": "^1.3.0",
     "bitcore-payment-protocol": "^1.7.0",
     "json-stable-stringify": "^1.0.0",
     "lodash": "^4.17.4",
