--- a/package.json
+++ b/package.json
@@ -27,28 +27,28 @@
     "async": "^0.9.0",
     "bip38": "^1.3.0",
     "bitcore-lib-cash": "^0.16.1",
-    "bitcore-lib-rapture": ">=0.16.0",
-    "bitcore-mnemonic-rapture": ">=1.3.0",
-    "bitcore-payment-protocol-rapture": "^1.7.0",
+    "bitcore-lib-rapture": "^0.16.1",
+    "bitcore-mnemonic-rapture": "^1.5.2",
+    "bitcore-payment-protocol-rapture": "^1.7.1",
     "json-stable-stringify": "^1.0.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.10",
     "preconditions": "^1.0.8",
     "sjcl": "1.0.3",
-    "superagent": "^3.4.1"
+    "superagent": "^3.8.3"
   },
   "devDependencies": {
     "bitcore-wallet-service-rapture": ">=2.4.0",
     "browserify": "^13.1.0",
     "chai": "^1.9.1",
     "coveralls": "^2.11.2",
+    "grunt-jsdox": "github:matiu/grunt-jsdox#update/jsdoc-4.10",
     "istanbul": "*",
     "mocha": "^1.18.2",
     "sinon": "^1.10.3",
-    "supertest": "^3.0.0",
+    "supertest": "^3.1.0",
     "tingodb": "^0.3.4",
     "uglify": "^0.1.1",
-    "uuid": "^2.0.1",
-    "grunt-jsdox": "matiu/grunt-jsdox#update/jsdoc-4.10"
+    "uuid": "^2.0.1"
   },
   "scripts": {
     "start": "node app.js",
