--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "bitcore-lib-cash": "^0.16.1",
     "bitcore-lib-rapture": "^0.16.1",
     "bitcore-mnemonic-rapture": "^1.5.2",
-    "bitcore-payment-protocol-rapture": "^1.7.1",
+    "bitcore-payment-protocol-rapture": ">=1.7.2",
     "json-stable-stringify": "^1.0.0",
     "lodash": "^4.17.10",
     "preconditions": "^1.0.8",
