--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "dependencies": {
     "async": "^0.9.0",
     "bip38": "^1.3.0",
+    "bitcore-lib": "^0.15.0",
     "bitcore-lib-cash": "^0.16.1",
-    "bitcore-lib-rapture": ">=0.16.4",
+    "bitcore-lib-rapture": "^0.16.6",
+    "bitcore-mnemonic": "^1.3.0",
     "bitcore-mnemonic-rapture": "^1.5.2",
     "bitcore-payment-protocol-rapture": ">=1.7.2",
     "json-stable-stringify": "^1.0.0",
