--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bitcore-lib-rapture": "^0.16.6",
     "bitcore-mnemonic": "^1.3.0",
     "bitcore-mnemonic-rapture": "^1.5.2",
+    "bitcore-payment-protocol": ">=1.7.0",
     "bitcore-payment-protocol-rapture": ">=1.7.2",
     "json-stable-stringify": "^1.0.0",
     "lodash": "^4.17.10",
